# linked-list

./: .gitignore  README.md  pyproject.toml
src/linked_list/: linked_list.py
tests/: test_linked_list.py
