[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linked_list"
version = "0.0.1"
authors = [
    { name="Michael Grinfeld", email="grinfeld@gmail.com" },
]
description = "Python Study Project"
license = "MIT"
requires-python = ">=3.9"

[tool.setuptools.packages]
where = ["src"]
exclude = ["tests*", "docs*"]
find = {}  # Scan the project directory with the default parameters